@@ -1,3 +1,9 @@
+2009-12-07  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclStrToD.c:  Correct conditional compile directives to
+	better detect the toolchain that needs extra work for proper underflow
+	treatment instead of merely detecting the mips platform. [Bug 2902010].
+
 2009-12-07  Miguel Sofer  <msofer@users.sf.net>
 
 	* generic/tclBasic.c:  add ::tcl::unsupported::yieldTo
